# bobo-pipeline

./: .gitmodules  karma.exr  piper.toml  production-data  pyproject.toml
.githooks/: pre-commit
pipeline/: __main__.py
pipeline/lib/ocio/love-v01/: LICENSE.md  README.md  config.ocio
pipeline/lib/ocio/love-v01/baked/flame/: P3-D60 for ACEScc Flame.3dl  P3-D60 for ACEScct Flame.3dl  P3-D60 for ACESproxy Flame.3dl  P3-D65 ST2084 (1000 nits) for ACEScc Flame.3dl  P3-D65 ST2084 (1000 nits) for ACEScct Flame.3dl  (+40 more)
pipeline/lib/ocio/sandwich-v01/: config.ocio
pipeline/pipe/asset/: versioning.py
pipeline/pipe/db/: sgaadb.py
pipeline/pipe/h/: __init__.py  animpostprocess.py  assetbuilder.py  nodelayouts.py  shading.py  variants.py
pipeline/pipe/h/hipfile/: asset.py  environment.py  filemanager.py  shot.py
pipeline/pipe/h/playblast/: playblaster.py  tool.py  ui.py
pipeline/pipe/m/: __init__.py  command.py
pipeline/pipe/m/assetfile/: assetfile_manager.py
pipeline/pipe/m/layout/: maker.py
pipeline/pipe/m/playblast/: anim.py  playblaster.py  ui.py
pipeline/pipe/m/publish/: anim.py  asset.py  camera.py  publisher.py  usdchaser.py
pipeline/pipe/m/rig/: model.py
pipeline/pipe/m/rig_builder/: build.py  progress.py  publish.py
pipeline/pipe/m/rig_builder/ui/: rig_select.py  test_select.py  window.py  window_ui.py
pipeline/pipe/m/shotfile/: anim.py  rlo.py  shotfile_manager.py  timeline.py
pipeline/pipe/sp/: __init__.py  assetfile.py  ui.py
pipeline/pipe/struct/: __init__.py  db.py  material.py
pipeline/pipe/util/: filemanager.py
pipeline/shared/: util.py
pipeline/software/: baseclass.py
pipeline/software/houdini/: __init__.py  dcc.py
pipeline/software/maya/: __init__.py  dcc.py
pipeline/software/maya/plugins/: pipeline.py
pipeline/software/maya/scripts/: shotSculpt.py
pipeline/software/maya/shelves/: shelf_Bobo_Assets.mel  shelf_LnD_Animation.mel
pipeline/software/maya/userSetup/: userSetup.py
pipeline/software/nuke/: __init__.py
pipeline/software/nuke/tools/BobukeTools/: menu.py
pipeline/software/nuke/tools/NungeonTools/: menu.py
pipeline/software/substance_designer/: __init__.py
pipeline/software/substance_painter/: __init__.py
(+112 files in other folders)
